[package]
name = "chains"
version = "0.1.0"
edition = "2021"
authors = ["DaniPopes <danipopes1@proton.me>"]
license = "MIT"
readme = "README.md"

[dependencies]
once_cell = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

zip = { version = "0.6", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["zip"]
zip = ["dep:zip"]
