[package]
name = "chains"
version = "0.1.0"
edition = "2021"
authors = ["DaniPopes <danipopes1@proton.me>"]
license = "MIT"
readme = "README.md"

[dependencies]
once_cell = { version = "1.16", default-features = false, features = ["alloc", "critical-section"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

zip = { version = "0.6", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["std", "zip"]
std = ["once_cell/std", "serde/std", "serde_json/std"]
zip = ["dep:zip"]

mini = []
